<resources>
    <string name="app_name">MeetWith</string>
    <string name="title_home">Home</string>
    <string name="title_history">History</string>
    <string name="title_contacts">Contacts</string>
    <string name="title_settings">Settings</string>
    
    <string name="new_meeting">New Meeting</string>
    <string name="join_meeting">Join</string>
    <string name="schedule_meeting">Schedule</string>
    <string name="share_screen">Share Screen</string>
    
    <string name="login">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Full Name</string>
    <string name="google_sign_in">Continue with Google</string>
    <string name="dont_have_account">Don\'t have an account? Sign Up</string>
    <string name="already_have_account">Already have an account? Log In</string>
</resources>
